--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+
+/* Ajustes para el foooter siempre abajo*/
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.App > * {
+  flex: 1;
+}
+
+footer {
+  flex-shrink: 0;
+}
