--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,5 @@
 .espace{
   width: 100%;
-  height: 200px;
   position: relative;
   padding: 100px 0 0;
 }
@@ -11,7 +10,7 @@
     text-align: center;
     padding: 20px 0;
     position: relative;
-    bottom: 0;
+    top: 189.5%;
     width: 100%;
   }
   
