--- a/src/components/Header/HeaderAdmin.css
+++ b/src/components/Header/HeaderAdmin.css
@@ -101,17 +101,23 @@
     outline: none;
 }
 
-/*.LogOut .IconImage {
-    width: 40px;
+.LogOut .IconImage{
+    width: 50px;
     height: auto;
     padding: 8.62px 9.50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 20px;
-}*/
+    margin-right: 159px;
+    transition: 0.3s;
+}
 
+.LogOut .IconImage:hover{
+    background-color: #F7F2FA;
+    border-radius: 5px;
+}
 
+/*
 .LoginButton {
     margin-left: 20px;
   }
@@ -134,6 +140,7 @@
     background-color: #F7F2FA;
     color: #FFC120;
   }
+*/
 
 
 .Options a {
@@ -149,7 +156,7 @@
 
 .Options a:hover{
     background-color: white;
-    color: #FFC120;
+    color: #1D1B20;
     padding: 10px;
     border-radius: 5px;
 
