--- a/src/components/VerClases/VerClases.css
+++ b/src/components/VerClases/VerClases.css
@@ -1,157 +1,56 @@
-.calendar-container {
-  text-align: center;
-  font-family: Arial, sans-serif;
-  margin: 50px;
+.calendar-table {
+  border-collapse: collapse;
+  border-spacing: 10px 5px;
+  width: 100%;
 }
 
 .calendar-header {
-  background-color: #263493;
-  color: white;
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 30px;
+  position: sticky;
+  background: white;
+  top: 0px;
+  z-index: 2;
+  border-bottom: 1px solid rgb(60, 60, 59);
+  line-height: 2;
 }
 
-.calendar-header h1 {
+.calendar-header td,
+.calendar-header th {
+  margin: 10px 5px;
+  width: 100px;
+  height: 50px;
+  font-weight: 400;
+  min-width: 100px;
+  border-bottom: 2px dashed rgba(60, 60, 59, 0.1);
+}
+
+.containerDayCalendar {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-size: 12px;
+}
+
+.colorPrimCalendar {
+  color: white;
+}
+
+.colorSecuCalendar {
+  color: black;
+}
+
+.calendar-body th {
+  margin: 10px 5px;
+  width: 100px;
+  height: 50px;
+  font-weight: 400;
+  color: rgb(151, 150, 149);
+  font-size: 12px;
+}
+
+.itemCalendarLesson h5 {
   margin: 0;
 }
 
-.calendar-month {
-  margin-right: 20px;
-}
-
-.calendar {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 20px;
-}
-
-.calendar th,
-.calendar td {
-  border: 1px solid #ddd;
-  padding: 10px;
-}
-
-.calendar th {
-  background-color: #6a86f3;
-  color: white;
-}
-
-.calendar td {
-  background-color: #e8ebfe;
-}
-
-.calendar td:first-child {
-  background-color: #6a86f3;
-  color: white;
-  font-weight: bold;
-}
-
-.buttons {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  padding: 20px;
-}
-
-.ingresar-clase,
-.agregar-clase {
-  padding: 15px 30px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  border-radius: 20px;
-}
-
-.ingresar-clase {
-  background-color: #fc4c4e;
-  color: white;
-}
-
-.agregar-clase {
-  background-color: white;
-  color: black;
-  border: 2px solid black;
-}
-
-.calendar-container {
-  text-align: center;
-  font-family: Arial, sans-serif;
-  margin: 50px;
-}
-
-.calendar-header {
-  background-color: #263493;
-  color: white;
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 30px;
-}
-
-.calendar-header h1 {
+.itemCalendarLesson p {
   margin: 0;
-}
-
-.calendar-month {
-  margin-right: 20px;
-}
-
-.calendar {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 20px;
-}
-
-.calendar th,
-.calendar td {
-  border: 1px solid #ddd;
-  padding: 10px;
-}
-
-.calendar th {
-  background-color: #6a86f3;
-  color: white;
-}
-
-.calendar td {
-  background-color: #e8ebfe;
-}
-
-.calendar td:first-child {
-  background-color: #6a86f3;
-  color: white;
-  font-weight: bold;
-}
-
-.buttons {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  padding: 20px;
-}
-
-.ingresar-clase,
-.agregar-clase {
-  padding: 15px 30px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  border-radius: 20px;
-}
-
-.ingresar-clase {
-  background-color: #fc4c4e;
-  color: white;
-}
-
-.agregar-clase {
-  background-color: white;
-  color: black;
-  border: 2px solid black;
 }
