--- a/src/components/VerClases/VerClases.css
+++ b/src/components/VerClases/VerClases.css
@@ -17,7 +17,7 @@
   background: rgb(255, 255, 255);
   top: 0px;
   z-index: 2;
-  border-top: 2px solid rgb(60, 60, 90);
+
   line-height: 2;
 }
 
@@ -26,18 +26,28 @@
   margin: 10px 5px;
   width: 100px;
   height: 50px;
-  font-weight: 400;
+
   min-width: 100px;
-  border-bottom: 2px dashed rgb(111, 111, 114);
+
+}
+h1 {
+  color: black;
+  text-align: center;
+  font-size: 50px;
 }
 
-td, th {
+td {
   border: 2px dashed rgba(197, 197, 255, 0.233);
   position: relative;
   padding: 10px 10px;
+  border-radius: 30px;
 }
 
 th {
+  border: 2px dashed rgb(255, 255, 255);
+  position: relative;
+  padding: 10px 10px;
+  border-radius: 30px;
   background: rgb(61, 61, 233);
   color: white;
 }
