--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -14,7 +14,7 @@
 .header {
   width: 100%;
   background: #FFC120;
-  padding: 0px 10px;
+  padding: 9px 10px;
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -35,6 +35,7 @@
 .LogoImage {
   width: 120px; /* Ajusta el tamaño del logo */
   height: auto;
+  margin-left: 50px;
   
 }
 
@@ -45,6 +46,7 @@
   gap: 20px; /* Espacio entre los enlaces */
   flex-grow: 1;
   justify-content: flex-start;
+  margin-left: 18%;
 }
 
 /* Contenedor del botón de login/logout */
@@ -80,6 +82,7 @@
   font-size: 16px;
   padding: 10px 20px;
   border-radius: 5px;
+  margin-right: 50px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
 }
