--- a/src/Forms/ClasesForm/ClasesForm.css
+++ b/src/Forms/ClasesForm/ClasesForm.css
@@ -8,7 +8,8 @@
   align-items: center;
   height: 100vh;
 }
-.form-container {
+
+.form-con {
   background-color: #d1a8d8;
   border-radius: 10px;
   padding: 20px;
@@ -74,14 +75,7 @@
   align-items: center;
   height: 100vh;
 }
-.form-container {
-  background-color: #d1a8d8;
-  border-radius: 10px;
-  padding: 20px;
-  max-width: 300px;
-  margin: 0 auto;
-  text-align: center;
-}
+
 
 .form-title {
   background-color: #a54ebf;
