--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,48 +1,49 @@
 .carousel {
-    position: relative;
-    width: 100%;
-    height: 700px; /* Ajusta la altura según tus necesidades */
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 30px; /* Espacio entre el carrusel y el header */
-  }
+  position: relative;
+  width: 100%;
+  height: 850px; /* Ajusta la altura según tus necesidades */
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 30px; /* Espacio entre el carrusel y el header */
+}
+
+.carousel-images-wrapper {
+  display: flex;
+  width: 130%;
+  height: 80%; /* Asegúrate de que el contenedor tenga la altura completa del carrusel */
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-image {
+  flex-shrink: 0; /* Asegura que las imágenes no se encojan */
+  width: 200%;
+  height: 100%; /* Asegura que las imágenes tengan la altura completa del carrusel */
+  object-fit: cover; /* Asegura que la imagen se ajuste correctamente sin distorsión */
+}
   
-  .carousel-images-wrapper {
-    display: flex;
-    width: 100%;
-    transition: transform 0.5s ease-in-out;
-  }
+.carousel-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: none;
+  color: rgb(255, 255, 255);
+  font-size: 3rem;
+  cursor: pointer;
+  z-index: 10;
+  opacity: 0.5; /* Añadido para hacer los botones menos invasivos */
+}
   
-  .carousel-image {
-    width: 100%;
-    height: 1500px; /* Asegúrate de que coincida con la altura del carrusel */
-    object-fit: cover; /* Asegura que la imagen se ajuste correctamente sin distorsión */
-  }
+.carousel-button:hover {
+  opacity: 1; /* Aumenta la opacidad cuando el usuario pasa el cursor sobre el botón */
+}
   
-  .carousel-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: transparent;
-    border: none;
-    color: rgb(255, 255, 255);
-    font-size: 3rem;
-    cursor: pointer;
-    z-index: 10;
-    opacity: 0.5; /* Añadido para hacer los botones menos invasivos */
-  }
+.carousel-button.prev {
+  left: 10px;
+}
   
-  .carousel-button:hover {
-    opacity: 1; /* Aumenta la opacidad cuando el usuario pasa el cursor sobre el botón */
-  }
-  
-  .carousel-button.prev {
-    left: 10px;
-  }
-  
-  .carousel-button.next {
-    right: 10px;
-  }
-  
+.carousel-button.next {
+  right: 10px;
+}
